fixing javascript for the collapse

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -109,7 +109,7 @@ html {
 }
 
 .collapsible:after {
-  content: '\002B';
+  content-collapse: '\002B';
   color: white;
   font-weight: bold;
   float: right;
@@ -117,7 +117,7 @@ html {
 }
 
 .active:after {
-  content: "\2212";
+  content-collapse: "\2212";
 }
 
 .content-collapse {
